--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -14,6 +14,11 @@
             return 1;
         }, function () {
             alert("支付成功success");
+        }, function (e) {
+            //如果返回错误，请输入e看是什么内容
+
+        }, function (e) {
+
         }
         );
     });
