修改组件代码，设计并发布NuGet安装包

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-    string orderid=DateTime.Now.Ticks.ToString();
+    string orderid = DateTime.Now.Ticks.ToString();
     string openid = "uO-ZyMILKGWG_5ZXC6*********************";
 }
 
@@ -17,9 +17,9 @@
             alert("支付成功success");
         }, function (e) {
             //如果返回错误，请输入e看是什么内容
-
+            alert(e);
         }, function (e) {
-
+            alert(e);
         }
         );
     });
