--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -13,11 +13,13 @@
     //所有工作的目的就是为了以下面简化的方式调用微信支付控件
     $(function () {
         var options = {
-            pid: "123", sp_billno: "@orderid", desc: "这是一个测试支付"
+            pid: "123",desc: "这是一个测试支付"
         };
         $("a.pay").wxPay("/home/payment", "@openid", options, function () {
             $.fn.wxPay.OrderParam = "data";
+            $.fn.wxPay.OrderCode = "@orderid";
             //支付前计算支付金额或写固定金额
+            //考虑到订单重复提交的可能性，订单可通过公共属性获取
             return 1;
         }, function () {
             alert("支付成功success");
@@ -25,9 +27,11 @@
             //如果返回错误，请输入e看是什么内容
             alert(e);
         }, function (e) {
+            //2016-03-14 用户取消支付后返回新的guid，可以作为新的订单编号使用
+            //当然也可以是其他订单号规则，请自行修改/home/payment中的payNo返回值
             alert(e);
         }
-        );        
+        );
 
             @{
                 string AppID = "";
@@ -38,9 +42,9 @@
                 var result = OAuthApi.GetAccessToken(AppID,AppSecret, Request.QueryString["code"]);
                 string accesstok =result.access_token;
                 string addSign = WxPayV3.GetUserAddrSign(AppID,accesstok, nonestr, timestamp, url);
-            }        
+            }
         $("a#getaddr").SelectAddress('@AppID', '@addSign', '@timestamp', '@nonestr', function (res) {
-            //res.username 收货人 res.telNumber 收货电话 res.addressPostalCode 邮编 res.nationalCode 国家码 
+            //res.username 收货人 res.telNumber 收货电话 res.addressPostalCode 邮编 res.nationalCode 国家码
             alert($.fn.wxPay.SelectedAddr);
         }, function (desc) { alert(desc); }, function (desc) { alert(desc); });
 
